# rust-graphql

./: .env  Cargo.toml  README.md
migrations/: 20231125123042_init.up.sql
src/: main.rs
src/config/: dbconfig.rs  mod.rs
src/schema/: mod.rs
src/schema/auth/: mod.rs  userschema.rs
src/schema/home/: filemodel.rs  fileread.rs  mod.rs
src/schema/scraper/: mod.rs  myscraper.rs  myscrapermodel.rs
