[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.11", features = ["chrono"] }
async-graphql-axum = "6.0.11"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15.0"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
polars = { version = "0.35.4", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
    "serde",

] }
reqwest = "0.11.23"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
validator = { version = "0.16", features = ["derive"] }
